--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.example.bitazzademo'
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.example.bitazzademo"
-        minSdk 24
-        targetSdk 33
+        minSdk 23
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -87,5 +87,7 @@ dependencies {
 
     // UI
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+
+    api "org.bouncycastle:bcprov-jdk15on:$versions.bouncycastle"
 
 }
