--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BitazzaDemo"
         tools:targetApi="31">
-
         <activity
-            android:name=".ui.account.AccountActivity"
-            android:exported="true"
-            android:theme="@style/AppTheme.NoActionBar.TransparentStatusBar">
+            android:name=".ui.SplashActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,9 +27,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.account.AccountActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar.TransparentStatusBar">
+        </activity>
+        <activity
             android:name=".ui.main.MainActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
     </application>
 
 </manifest>
